<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.fge</groupId>
  <artifactId>vavi-nio-file-box</artifactId>
  <version>0.1.16</version>

  <name>vavi-nio-file-box</name>
  <scm>
    <url>https://github.com/umjammer/vavi-nio-file-box</url>
  </scm>
  <url>https://github.com/umjammer/vavi-nio-file-box</url>

  <properties>
    <!-- com.github.umjammer -->
    <vavi-nio-file-base.groupId>com.github.umjammer</vavi-nio-file-base.groupId> <!-- com.github.fge / com.github.umjammer -->
    <vavi-nio-file-base.version>0.0.14v</vavi-nio-file-base.version>

    <vavi-nio-file-fuse.groupId>com.github.umjammer</vavi-nio-file-fuse.groupId> <!-- vavi / com.github.umjammer -->
    <vavi-nio-file-fuse.version>0.0.16</vavi-nio-file-fuse.version>
  </properties>

  <profiles>
    <profile>
      <id>local (not on CI)</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
        <property>
          <name>env.JITPACK</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.1.0</version>
            <executions>
              <execution>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
              <environmentVariables>
                <TEST_ACCOUNT>${test.account}</TEST_ACCOUNT>
                <TEST_PASSWORD>${test.password}</TEST_PASSWORD>
                <TEST_CLIENT_ID>${test.client_id}</TEST_CLIENT_ID>
                <TEST_CLIENT_SECRET>${test.client_secret}</TEST_CLIENT_SECRET>
                <TEST_REDIRECT_URL>${test.redirect_url}</TEST_REDIRECT_URL>
                <TEST_SCOPES>${test.scopes}</TEST_SCOPES>
                <BOX_DEVELOPER_TOKEN>${box.developer_token}</BOX_DEVELOPER_TOKEN>
              </environmentVariables>
              <argLine>
                -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
                -Dwebdriver.chrome.driver=${webdriver.chrome.driver}
                -Dcom.google.chrome.app="${com.google.chrome.app}"
              </argLine>
              <trimStackTrace>false</trimStackTrace>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>github workflow</id>
      <activation>
        <property>
          <name>env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
              <argLine>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argLine>
              <argLine>-Dvavi.util.logging.VaviFormatter.extraClassMethod=com\\.box\\.sdk\\.BoxLogger#(log|warn)</argLine>
              <trimStackTrace>false</trimStackTrace>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.box</groupId>
      <artifactId>box-java-sdk</artifactId>
      <version>10.2.0</version>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-base.groupId}</groupId>
      <artifactId>vavi-nio-file-base</artifactId>
      <version>${vavi-nio-file-base.version}</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer.vavi-net-auth</groupId> <!-- vavi / com.github.umjammer.vavi-net-auth -->
      <artifactId>vavi-net-auth-box</artifactId>
      <version>0.1.9</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-base.groupId}</groupId>
      <artifactId>vavi-nio-file-base</artifactId>
      <version>${vavi-nio-file-base.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-fuse.groupId}</groupId>
      <artifactId>vavi-nio-file-fuse</artifactId>
      <version>${vavi-nio-file-fuse.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-fuse.groupId}</groupId>
      <artifactId>vavi-nio-file-fuse</artifactId>
      <version>${vavi-nio-file-fuse.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.rainerhahnekamp</groupId>
      <artifactId>sneakythrow</artifactId>
      <version>1.2.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
